<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/appbar_size"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:paddingTop="12dp"
            android:text="New Messages"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/cancel"
            android:textColor="@color/blue"
            style="?android:attr/borderlessButtonStyle"
            android:fontFamily="@font/sf_pro_text_regular"
            android:textSize="@dimen/textSize_17"
            android:textAllCaps="false"/>

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:background="@color/disableButton"
            android:layout_height="@dimen/size_0_5"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20"
            android:fontFamily="@font/sf_pro_text_medium"
            android:text="@string/to"
            android:textColor="@color/C_828282"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/line2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line1" />

        <EditText
            android:id="@+id/address_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_18"
            android:background="@color/white"
            android:inputType="text"
            android:paddingEnd="@dimen/margin_10dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/line2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/to"
            app:layout_constraintTop_toBottomOf="@id/line1"
            android:textCursorDrawable="@drawable/blue_cursor"/>

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/size_18"
            android:background="@color/disableButton"
            android:layout_height="@dimen/size_0_5"
            app:layout_constraintTop_toBottomOf="@id/address_edit_text"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/size_12"
            android:layout_marginStart="@dimen/size_24"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/message_body"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line2" />

        <EditText
            android:id="@+id/message_body"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_32"
            android:layout_weight="1"
            android:background="@drawable/round_box"
            android:fontFamily="@font/sf_pro_text_regular"
            android:hint="@string/message"
            android:maxLines="3"
            android:minHeight="48dp"
            android:paddingHorizontal="@dimen/size_16"
            android:scrollbars="vertical"
            android:textSize="@dimen/textSize_17"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/send_message_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/size_16"
            android:layout_marginEnd="@dimen/size_14"
            android:layout_marginVertical="@dimen/size_8"/>

        <ImageButton
            android:id="@+id/send_message_button"
            android:layout_width="@dimen/size_22"
            android:layout_height="@dimen/size_22"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/white"
            android:src="@drawable/send_btn_ic"
            app:layout_constraintTop_toTopOf="@id/message_body"
            app:layout_constraintBottom_toBottomOf="@id/message_body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/message_body"
            android:layout_marginEnd="@dimen/size_18"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
